comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do Site</h1>
+            <h1>Curso Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>texto artigo 001</p>
+            <h2>Curso de HTML e CSS</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui distinctio optio quisquam impedit tenetur nobis rerum facere voluptatibus, tempora molestias deserunt, ut minima. Iste dicta optio, quidem quasi alias laudantium!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt deleniti minima modi quidem unde, iure explicabo repudiandae minus culpa sunt dignissimos sit vitae maiores a nisi? Libero nemo nulla inventore!</p>
         </article>
 
     </main>
